# local-llm-evals

./: .gitignore  CLAUDE.md  README.md  main.py  promptfooconfig.functiongemma-ft.yaml  promptfooconfig.functiongemma.yaml  promptfooconfig.gemma4-ft.yaml  promptfooconfig.yaml  pyproject.toml
data_for_finetune/: README.md  functiongemma_train.jsonl  titanic_explore.ipynb
datasets/: cases.json  finetune_seeds.yaml  lookup.json  seeds.yaml  tiny.json
finetune/: README.md  README_colab.md  README_gemma4.md  diag_sample.jsonl  jupyter_run.py  modal_diagnose.py  modal_eval.py  modal_eval_gemma4.py  modal_export.py  modal_export_gemma4.py  modal_finetune.py  modal_finetune_gemma4.py  smoke_finetune.py  train_functiongemma.py
pf/: assert.py  prompt.json  prompt.py  provider_functiongemma.py  tests.generated.yaml  tests.protocols.yaml  tests.yaml  tools.json
scripts/: convert_recognition.py  eval.sh  fetch_aave_fixtures.py  fetch_safe_fixtures.py  generate_cases.py  generate_finetune_data.py  generate_gemma4_finetune_data.py  generate_protocol_cases.py  preview.py  probe_functiongemma.py  probe_gemma4.py  safety_report.py  smoke_score.py
tests/: test_assert.py  test_convert.py  test_dataset_integrity.py  test_finetune_integrity.py  test_functiongemma_dsl.py  test_functiongemma_provider.py  test_functiongemma_scoring.py  test_gemma4_finetune_integrity.py  test_gemma_dsl.py  test_generated_integrity.py  test_generation.py  test_intents.py  test_openrouter_adapter.py  test_parsing.py  test_prompt_render.py  test_protocol_aave.py  test_protocol_integrity.py  test_report.py  (+7 more)
(+24 files in other folders)
