[project]
name = "evals-local-llm"
version = "0.1.0"
description = "LLM eval harness for the local agent wallet (executeTx/readTx payload generation)"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "pydantic>=2.6",
    "openai>=1.30",
    "openevals>=0.0.7",
    "eth-utils>=4.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet_evals"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
