[project]
name = "evals-local-llm"
version = "0.1.0"
description = "LLM eval harness for the local agent wallet (executeTx/readTx calls + synthetic swap intents, via promptfoo)"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
# Optional: only needed to *serve* the local FunctionGemma GGUF (compiles a
# native extension). Core users, CI, and the offline test suite don't need it.
#   uv run --group local python scripts/probe_functiongemma.py
local = [
    "llama-cpp-python>=0.3.0",
    "huggingface-hub>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wallet_evals"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
